--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<img class=". profile-img" src="https://media.licdn.com/dms/image/D5603AQHgx7673OYdCQ/profile-displayphoto-shrink_400_400/0/1694109272556?e=1699488000&v=beta&t=8Y0J3LvBMwxjeQvXytk72PV8pM0jcnx2dAt4m35bR8M" alt="" />
 <h1>Nyaniso Jujisa</h1>
 <script src="https://unpkg.com/feather-icons"></script>
-	<p>Programmer To Be and Software Developer, Available on Instagram <a href="https://instagram.com/jojiman04?igshid=OGQ5ZDc2ODk2ZA=="target="_blank">@jojiman04</a>
+	<p>Programmer To Be and Software Developer, Available on Instagram. <a href="https://instagram.com/jojiman04?igshid=OGQ5ZDc2ODk2ZA=="target="_blank">@jojiman04</a>
 	</p>
 
 <div>
@@ -20,10 +20,11 @@
 <i data-feather="youtube"></i>
 </div>
 
-<a class="btn">DM me on Instagram</a>
-<a class="btn">Visit my YouTube channel</a>
-<a class="btn">Send me a Tweet</a>
-<a class="btn">Email me</a>
+
+<a  class="btn"><strong>DM me on Instagram</strong></a>
+<a class="btn"><strong>Visit my YouTube channel </strong></a>
+<a class="btn"><strong>Send me a Tweet </astrong></a>
+<a class="btn"><strong>Email me</strong></a>
 
     <script>
       feather.replace()
